--- a/app/src/main/res/layout/activity_add_or_edit.xml
+++ b/app/src/main/res/layout/activity_add_or_edit.xml
@@ -81,13 +81,22 @@
             android:layout_marginBottom="10dp" />
 
         <EditText
+            android:id="@+id/priceText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:hint="Price"
+            android:layout_marginBottom="10dp" />
+
+        <EditText
             android:id="@+id/quantityText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number"
             android:hint="Quantity"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="10dp" />
 
         <EditText
             android:id="@+id/dateText"
