--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,65 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="MissingConstraints">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="">
+
+        <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal">
+            <SearchView
+                android:id="@+id/searchtxt"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_width="250dp"
+                android:layout_height="35dp" />
+            <Button
+                android:id="@+id/manageBtn"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:text="Manage"
+                android:layout_width="100dp"
+                android:layout_height="40dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+
+            <Spinner
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:id="@+id/categorySpn"
+                android:layout_marginLeft="20dp"
+                >
+            </Spinner>
+            <Button
+                android:layout_marginLeft="110dp"
+                android:layout_width="55dp"
+                android:layout_height="45dp"
+                android:id="@+id/addBtn"
+                android:text="+"
+                android:textSize="15dp"
+                ></Button>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/quotationlistView"
+            android:layout_width="360dp"
+            android:layout_height="580dp"
+            android:layout_gravity="center"
+
+            />
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
