--- a/app/src/main/res/layout/card_quotation.xml
+++ b/app/src/main/res/layout/card_quotation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -11,26 +11,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="20dp">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="120dp"
                         android:layout_height="30dp"
                         android:id="@+id/textview1"
-                        android:text="Customer Name:"/>
+                        android:text="Customer Name:" />
+
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="160dp"
                         android:layout_height="30dp"
                         android:id="@+id/customerNameText"/>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -44,7 +48,7 @@
                         android:id="@+id/textview2"
                         android:text="Quotation Number:"/>
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="160dp"
                         android:layout_height="30dp"
                         android:id="@+id/quotationNumText"/>
                 </LinearLayout>
@@ -61,10 +65,11 @@
                         android:id="@+id/textview3"
                         android:text="Date:"/>
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="160dp"
                         android:layout_height="30dp"
                         android:id="@+id/dateText"/>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
@@ -77,10 +82,11 @@
                         android:id="@+id/textview4"
                         android:text="Total:"/>
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="160dp"
                         android:layout_height="30dp"
                         android:id="@+id/totalTxt"/>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
@@ -92,11 +98,14 @@
                         android:layout_height="30dp"
                         android:id="@+id/textview5"
                         android:text="Status:"/>
+
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="160dp"
                         android:layout_height="30dp"
                         android:id="@+id/statusText"/>
+
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -116,6 +125,9 @@
                     android:id="@+id/duplicateBtn"
                     android:text="Duplicate"/>
             </LinearLayout>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
