--- a/app/src/main/res/layout/card_quotation.xml
+++ b/app/src/main/res/layout/card_quotation.xml
@@ -11,8 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="20dp">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -20,7 +19,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -31,14 +30,14 @@
                         android:text="Customer Name:" />
 
                     <TextView
-                        android:layout_width="160dp"
+                        android:layout_width="150dp"
                         android:layout_height="30dp"
                         android:id="@+id/customerNameText"/>
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
@@ -48,13 +47,13 @@
                         android:id="@+id/textview2"
                         android:text="Quotation Number:"/>
                     <TextView
-                        android:layout_width="160dp"
-                        android:layout_height="30dp"
-                        android:id="@+id/quotationNumText"/>
+                        android:id="@+id/quotationNumText"
+                        android:layout_width="150dp"
+                        android:layout_height="30dp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
@@ -65,13 +64,13 @@
                         android:id="@+id/textview3"
                         android:text="Date:"/>
                     <TextView
-                        android:layout_width="160dp"
+                        android:layout_width="150dp"
                         android:layout_height="30dp"
                         android:id="@+id/dateText"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
@@ -82,13 +81,13 @@
                         android:id="@+id/textview4"
                         android:text="Total:"/>
                     <TextView
-                        android:layout_width="160dp"
+                        android:layout_width="150dp"
                         android:layout_height="30dp"
                         android:id="@+id/totalTxt"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     >
@@ -100,7 +99,7 @@
                         android:text="Status:"/>
 
                     <TextView
-                        android:layout_width="160dp"
+                        android:layout_width="150dp"
                         android:layout_height="30dp"
                         android:id="@+id/statusText"/>
 
@@ -109,21 +108,27 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:paddingBottom="20dp"
+                >
                 <Button
                     android:layout_marginTop="25dp"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
                     android:id="@+id/editBtn"
                     android:text="Edit"/>
+
                 <Button
-                    android:layout_width="110dp"
+                    android:layout_width="92dp"
                     android:layout_height="50dp"
+                    android:textSize="10dp"
                     android:id="@+id/duplicateBtn"
                     android:text="Duplicate"/>
+
             </LinearLayout>
 
         </LinearLayout>
