--- a/app/src/main/res/layout/activity_metrics.xml
+++ b/app/src/main/res/layout/activity_metrics.xml
@@ -51,9 +51,10 @@
         </LinearLayout>
         <Button
             android:layout_marginLeft="5dp"
-            android:layout_width="55dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="<"
+            android:textSize="8dp"
+            android:text="Back"
             android:id="@+id/returnBtn" />
     </LinearLayout>
 
