--- a/app/src/main/res/layout/card_quotation.xml
+++ b/app/src/main/res/layout/card_quotation.xml
@@ -7,7 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:backgroundTint="#E1D9D1">
 
         <LinearLayout
             android:layout_width="match_parent"
